--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Alpha Gaming Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 </head>
 <body>
@@ -36,6 +37,18 @@
         </div>
         
       </header>
+      <section>
+        <div class="hero">
+            <h1>Let The Game Begins</h1>
+            <p>"Lets optimize for player experience rather than what we think will make more money."
+
+            </p>
+            <div class="btn">
+            <button class="hb">By Game onsteam</button>
+            <button class="hb">Watch Gameplay</button>
+        </div>
+        </div>
+      </section>
       <script>
           const toggle=document.querySelector('.bar')
           const dropdown=document.querySelector('.dropdown')
