--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
         </div>
         </div>
       </section>
+      <h2 class="trail">Game Trailer</h2>
       <iframe class="vdo" width="360" height="360" src="https://www.youtube.com/embed/hA55WshsKvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <footer class="copyright" id="co">
         <div class="c">
