--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <li class="dropitems"><a href="#s">Store</a></li>
               <li class="dropitems"><a href="#a">Accessories</a></li>
               <li class="dropitems"><a href="#ab">About us</a></li>
-              <li class="items"><a href="#ac">About cyberpunk</a></li>
+              <li class="dropitems"><a href="#ac">About cyberpunk</a></li>
             
               
         </div>
